{
  "version": 4,
  "terraform_version": "1.13.2",
  "serial": 214,
  "lineage": "19b3ca38-a2af-0c80-6387-3e168f0ccb58",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ed38648f-86e5-499c-b65b-d1dd79dc811a/resourceGroups/MTECH/providers/Microsoft.Network/networkInterfaces/nic-0",
            "internal_domain_name_suffix": "ybbbbnxftm4evnbjkjm5ox3l0d.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig-0",
                "primary": true,
                "private_ip_address": "10.0.1.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/ed38648f-86e5-499c-b65b-d1dd79dc811a/resourceGroups/MTECH/providers/Microsoft.Network/publicIPAddresses/pip-0",
                "subnet_id": "/subscriptions/ed38648f-86e5-499c-b65b-d1dd79dc811a/resourceGroups/MTECH/providers/Microsoft.Network/virtualNetworks/MTech_Network/subnets/subnet-project"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "centralindia",
            "name": "nic-0",
            "private_ip_address": "10.0.1.6",
            "private_ip_addresses": [
              "10.0.1.6"
            ],
            "resource_group_name": "MTECH"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ed38648f-86e5-499c-b65b-d1dd79dc811a/resourceGroups/MTECH/providers/Microsoft.Network/networkInterfaces/nic-1",
            "internal_domain_name_suffix": "ybbbbnxftm4evnbjkjm5ox3l0d.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig-1",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/ed38648f-86e5-499c-b65b-d1dd79dc811a/resourceGroups/MTECH/providers/Microsoft.Network/publicIPAddresses/pip-1",
                "subnet_id": "/subscriptions/ed38648f-86e5-499c-b65b-d1dd79dc811a/resourceGroups/MTECH/providers/Microsoft.Network/virtualNetworks/MTech_Network/subnets/subnet-project"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "centralindia",
            "name": "nic-1",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "MTECH"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ed38648f-86e5-499c-b65b-d1dd79dc811a/resourceGroups/MTECH/providers/Microsoft.Network/networkInterfaces/nic-2",
            "internal_domain_name_suffix": "ybbbbnxftm4evnbjkjm5ox3l0d.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig-2",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/ed38648f-86e5-499c-b65b-d1dd79dc811a/resourceGroups/MTECH/providers/Microsoft.Network/publicIPAddresses/pip-2",
                "subnet_id": "/subscriptions/ed38648f-86e5-499c-b65b-d1dd79dc811a/resourceGroups/MTECH/providers/Microsoft.Network/virtualNetworks/MTech_Network/subnets/subnet-project"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "centralindia",
            "name": "nic-2",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "MTECH"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ed38648f-86e5-499c-b65b-d1dd79dc811a/resourceGroups/MTECH/providers/Microsoft.Network/networkSecurityGroups/nsg-project",
            "location": "centralindia",
            "name": "nsg-project",
            "resource_group_name": "MTECH",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "ad_dns",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "53",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/ed38648f-86e5-499c-b65b-d1dd79dc811a/resourceGroups/MTECH/providers/Microsoft.Network/networkSecurityGroups/nsg-project/securityRules/AD-DNS",
            "name": "AD-DNS",
            "network_security_group_name": "nsg-project",
            "priority": 1001,
            "protocol": "Tcp",
            "resource_group_name": "MTECH",
            "source_address_prefix": "10.0.1.0/24",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "ad_kerberos",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "88",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/ed38648f-86e5-499c-b65b-d1dd79dc811a/resourceGroups/MTECH/providers/Microsoft.Network/networkSecurityGroups/nsg-project/securityRules/AD-Kerberos",
            "name": "AD-Kerberos",
            "network_security_group_name": "nsg-project",
            "priority": 1004,
            "protocol": "Tcp",
            "resource_group_name": "MTECH",
            "source_address_prefix": "10.0.1.0/24",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "ad_ldap",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/ed38648f-86e5-499c-b65b-d1dd79dc811a/resourceGroups/MTECH/providers/Microsoft.Network/networkSecurityGroups/nsg-project/securityRules/AD-LDAP",
            "name": "AD-LDAP",
            "network_security_group_name": "nsg-project",
            "priority": 1002,
            "protocol": "Tcp",
            "resource_group_name": "MTECH",
            "source_address_prefix": "10.0.1.0/24",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "ad_ldaps",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "636",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/ed38648f-86e5-499c-b65b-d1dd79dc811a/resourceGroups/MTECH/providers/Microsoft.Network/networkSecurityGroups/nsg-project/securityRules/AD-LDAPS",
            "name": "AD-LDAPS",
            "network_security_group_name": "nsg-project",
            "priority": 1003,
            "protocol": "Tcp",
            "resource_group_name": "MTECH",
            "source_address_prefix": "10.0.1.0/24",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/ed38648f-86e5-499c-b65b-d1dd79dc811a/resourceGroups/MTECH/providers/Microsoft.Network/networkSecurityGroups/nsg-project/securityRules/RDP",
            "name": "RDP",
            "network_security_group_name": "nsg-project",
            "priority": 1000,
            "protocol": "Tcp",
            "resource_group_name": "MTECH",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "sql_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "1433",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/ed38648f-86e5-499c-b65b-d1dd79dc811a/resourceGroups/MTECH/providers/Microsoft.Network/networkSecurityGroups/nsg-project/securityRules/SQL-Server",
            "name": "SQL-Server",
            "network_security_group_name": "nsg-project",
            "priority": 1005,
            "protocol": "Tcp",
            "resource_group_name": "MTECH",
            "source_address_prefix": "10.0.1.0/24",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/ed38648f-86e5-499c-b65b-d1dd79dc811a/resourceGroups/MTECH/providers/Microsoft.Network/publicIPAddresses/pip-0",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.213.166.86",
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "pip-0",
            "resource_group_name": "MTECH",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/ed38648f-86e5-499c-b65b-d1dd79dc811a/resourceGroups/MTECH/providers/Microsoft.Network/publicIPAddresses/pip-1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.213.166.182",
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "pip-1",
            "resource_group_name": "MTECH",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/ed38648f-86e5-499c-b65b-d1dd79dc811a/resourceGroups/MTECH/providers/Microsoft.Network/publicIPAddresses/pip-2",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.213.181.129",
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "pip-2",
            "resource_group_name": "MTECH",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/ed38648f-86e5-499c-b65b-d1dd79dc811a/resourceGroups/MTECH/providers/Microsoft.Network/virtualNetworks/MTech_Network/subnets/subnet-project",
            "name": "subnet-project",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "MTECH",
            "virtual_network_name": "MTech_Network"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ed38648f-86e5-499c-b65b-d1dd79dc811a/resourceGroups/MTECH/providers/Microsoft.Network/virtualNetworks/MTech_Network/subnets/subnet-project",
            "network_security_group_id": "/subscriptions/ed38648f-86e5-499c-b65b-d1dd79dc811a/resourceGroups/MTECH/providers/Microsoft.Network/networkSecurityGroups/nsg-project",
            "subnet_id": "/subscriptions/ed38648f-86e5-499c-b65b-d1dd79dc811a/resourceGroups/MTECH/providers/Microsoft.Network/virtualNetworks/MTech_Network/subnets/subnet-project"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "b61042c0-9be5-4a3c-b429-5259f75fabd3",
            "id": "/subscriptions/ed38648f-86e5-499c-b65b-d1dd79dc811a/resourceGroups/MTECH/providers/Microsoft.Network/virtualNetworks/MTech_Network",
            "location": "centralindia",
            "name": "MTech_Network",
            "resource_group_name": "MTECH"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}